Add javadocs and refactor class constructor